<resources>
    <string name="app_name">MALclient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MyAnimeList Client</string>
    <string name="nav_header_subtitle">example@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_list">MyList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="username">User</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="registre">Register</string>
    <string name="repeteix_contrasenya">Repeat Password</string>
    <string name="email">Mail</string>
    <string name="nom">Name</string>
    <string name="cognom">Surname</string>
    <string name="aniversari">Birthday</string>
    <string name="g_nere">Gender</string>
    <string name="accepta">Accept Terms and Conditions</string>
    <string name="genere">Gender</string>
    <string name="titol">Title</string>
    <string name="todo">TODO</string>
    <string name="search_anime_name">Search (min 3 characters)</string>
    <string name="add_new_anime">Add New Anime</string>
    <string name="extra">Here we will put a lot of text to show that there are many things but we really do not have Settings</string>
    <string name="estat">State</string>
    <string name="nota">Score</string>
    <string name="afegir">Add</string>
    <string name="add">Add</string>
    <string name="score">Score</string>
    <string name="state">State</string>
</resources>