<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:background="@color/black"
    android:layout_margin="2dp">

    <ImageView
        android:id="@+id/image_url"
        android:layout_width="154dp"
        android:layout_height="154dp"
        android:layout_row="0"
        android:layout_column="0"
        android:gravity="center_horizontal"
        android:src="@drawable/onepiece"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="@id/image_url"
        android:layout_marginRight="@id/image_url"
        android:hint="@string/titol"
        android:textColorHint="@color/white"
        android:textColor="@color/purple_200"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="2dp" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginLeft="2dp"
        android:hint="@string/genere"
        android:textColorHint="@color/white"
        android:textColor="@color/purple_200"
        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_marginStart="2dp"
        tools:ignore="SmallSp" />

</GridLayout>